[gd_scene load_steps=5 format=2]

[ext_resource path="res://title_screen/settings/settings_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/cancel_shortcut.tres" type="ShortCut" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://title_screen/settings/key_binding_popup.gd" type="Script" id=4]

[node name="Settings" type="Control"]
anchor_left = 0.00125241
anchor_right = 1.00125
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 31.0
margin_right = -48.9985
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 862.0
margin_bottom = 26.0
text = "ui_settings"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 862.0
margin_bottom = 455.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 855.0
margin_bottom = 418.0

[node name="SoundSettings" type="Control" parent="VBoxContainer/PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Container" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -28.0
margin_right = 150.0
margin_bottom = 28.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_right = 396.0
margin_bottom = 26.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume"]
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_master_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume"]
margin_left = 196.0
margin_right = 396.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_top = 30.0
margin_right = 396.0
margin_bottom = 56.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume"]
margin_left = 12.0
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_music_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume"]
margin_left = 196.0
margin_right = 396.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2

[node name="SfxVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_top = 60.0
margin_right = 396.0
margin_bottom = 86.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume"]
margin_left = 36.0
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_sfx_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume"]
margin_left = 196.0
margin_right = 396.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2

[node name="KeyBindings" type="ScrollContainer" parent="VBoxContainer/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/TabContainer/KeyBindings"]
margin_left = 417.0
margin_top = 178.0
margin_right = 417.0
margin_bottom = 178.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="OtherSettings" type="ScrollContainer" parent="VBoxContainer/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Container" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings"]
margin_left = 324.0
margin_top = 119.0
margin_right = 510.0
margin_bottom = 237.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_right = 186.0
margin_bottom = 26.0
text = "ui_fullscreen"

[node name="ParticlesCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_top = 46.0
margin_right = 186.0
margin_bottom = 72.0
text = "ui_particles"

[node name="ScreenshakeCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_top = 92.0
margin_right = 186.0
margin_bottom = 118.0
text = "ui_screenshake"

[node name="BackToTitleButton" type="Button" parent="VBoxContainer"]
margin_left = 328.0
margin_top = 459.0
margin_right = 534.0
margin_bottom = 499.0
size_flags_horizontal = 4
shortcut_in_tooltip = false
shortcut = ExtResource( 2 )
text = "ui_back_to_title"

[node name="KeyBindingPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -58.0
margin_right = 102.5
margin_bottom = 58.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="KeyBindingPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabel" type="Label" parent="KeyBindingPopup/VBoxContainer"]
margin_right = 260.0
margin_bottom = 26.0
align = 1

[node name="Label" type="Label" parent="KeyBindingPopup/VBoxContainer"]
margin_top = 30.0
margin_right = 260.0
margin_bottom = 56.0
text = "Press a key..."
align = 1

[node name="HSeparator" type="HSeparator" parent="KeyBindingPopup/VBoxContainer"]
margin_top = 60.0
margin_right = 260.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="KeyBindingPopup/VBoxContainer"]
margin_top = 84.0
margin_right = 260.0
margin_bottom = 124.0
alignment = 1

[node name="CancelButton" type="Button" parent="KeyBindingPopup/VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 40.0
focus_mode = 0
text = "Cancel"

[node name="ClearButton" type="Button" parent="KeyBindingPopup/VBoxContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 260.0
margin_bottom = 40.0
focus_mode = 0
text = "Clear Binding"

[connection signal="visibility_changed" from="." to="." method="_on_Settings_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume/VolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume/VolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume/VolumeSlider" to="." method="_on_SfxVolumeSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/ParticlesCheckbox" to="." method="_on_ParticlesCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/ScreenshakeCheckbox" to="." method="_on_ScreenshakeCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
[connection signal="action_remapped" from="KeyBindingPopup" to="." method="_on_KeyBindingPopup_action_remapped"]
[connection signal="pressed" from="KeyBindingPopup/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_KeybindingCancelButton_pressed"]
[connection signal="pressed" from="KeyBindingPopup/VBoxContainer/HBoxContainer/ClearButton" to="KeyBindingPopup" method="_on_ClearButton_pressed"]
